Slight cleanup to tests, mockito agent